// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task lz:errors:decode should print CustomError details 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error LZ_ULN_Unsorted()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print CustomError details if the error is 0x0dc652a8 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error LZ_ULN_InvalidLegacyType1Option()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print CustomError details if the error is 0x645f0f4f 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error LZ_MessageLib_InsufficientMsgValue()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print PanicError details 1`] = `
[
  {
    "Error": "PanicError: Contract panicked (assert() has been called). Error code 6",
    "Type": "Panic error",
  },
]
`;

exports[`task lz:errors:decode should print RevertError details 1`] = `
[
  {
    "Error": "RevertError: Contract reverted. Error reason 'my bad'",
    "Type": "Revert error",
  },
]
`;
